// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge AfterContent should aggregate line_items by subscriptions 1`] = `
<div>
  <div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        1
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        foo
         (
        7
        )
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        bar
         (
        5
        )
      </span>
    </div>
  </div>
  <div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        2
      </span>
    </div>
    <div
      class="widgetField staticWidgetField"
    >
      <span
        class="widgetFieldValue"
      >
        baz
         (
        1
        )
      </span>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-3"
      type="button"
    >
      <span
        id="action-button-3-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          attach_money
        </i>
      </span>
       Refund
    </button>
  </span>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 2`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-4"
      type="button"
    >
      <span
        id="action-button-4-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          attach_money
        </i>
      </span>
       Refund
    </button>
  </span>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-5"
      type="button"
    >
      <span
        id="action-button-5-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          attach_money
        </i>
      </span>
       Refund
    </button>
  </span>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 2`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-6"
      type="button"
    >
      <span
        id="action-button-6-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          attach_money
        </i>
      </span>
       Refund
    </button>
  </span>
</div>
`;

exports[`Charge AfterTitle should not display the refund action when the status is not SUCCESS or PARTIALLY_REFUNDED 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 2`] = `<div />`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Status
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Foobar
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div
    class="widgetField staticWidgetField"
  >
    <span
      class="widgetFieldLabel"
    >
      Status
      :
       
    </span>
    <span
      class="widgetFieldValue"
    >
      <div
        class="badge"
      >
        Error
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-1"
      type="button"
    >
      <span
        id="action-button-1-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          block
        </i>
      </span>
       Skip
    </button>
  </span>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the unskipCharge action if the charge is skipped 1`] = `
<div>
  <span
    class="container group horizontal"
  >
    <button
      class="wrapper actionButton fill secondary small"
      id="action-button-2"
      type="button"
    >
      <span
        id="action-button-2-tooltip-target"
      />
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          autorenew
        </i>
      </span>
       Unskip
    </button>
  </span>
</div>
`;

exports[`Charge SubscriptionAfterTitle should not display any action if the charge is nor queued nor skipped 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `<div />`;

exports[`Charge TitleWrapper customer context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;
